name:                text-adventure-framework
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/SumAll/text-adventure-framework#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Ho
maintainer:          mho@sumall.com
copyright:           SumAll, Inc
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable text-adventure-framework-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text-adventure-framework
  default-language:    Haskell2010

test-suite text-adventure-framework-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text-adventure-framework
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/SumAll/text-adventure-framework
